Mobile menu initial visibility bug fixed

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -146,6 +146,10 @@
     transform: translateX(0);
 }
 
+.hidden {
+    opacity: 0;
+}
+
 #icon-wrap.active #icon {
     height: 0;
 }
